Make secureproxy more resistant for non-urlencoded urls.
We use URL class to parse urls and then alternative URI constructor
that does URL encoding. In case we cannot form URL object from the
initial url we will try to recover by creating the URI object
straight from the url.

Protocol checking is now done in own method.